# mhi-ac-ctrl-esp32-c3

./: .editorconfig  CMakeLists.txt  Hardware.md  LICENSE  README.md  custom.csv  sdkconfig copy  sdkconfig.old
.github/workflows/: build-example.yml
components/homekit/src/: server.c
components/wolfssl/: CMakeLists.txt  user_settings.h
esphome/: .gitignore  MHI-AC-Ctrl-core.cpp  MHI-AC-Ctrl-core.h  example-external-sensor.yaml  example.yaml  mhi_ac_ctrl.h
esphome/components/MhiAcCtrl/: MHI-AC-CTRL-operation-data.h  MHI-AC-Ctrl-core.cpp  MHI-AC-Ctrl-core.h  MHI-AC-Ctrl-internal.h  __init__.py  binary_sensor.py  climate.py  mhi_ac_ctrl.h  select.py  sensor.py  switch.py
esphome/my_components/MhiAcCtrl/: MHI-AC-Ctrl-core.cpp  MHI-AC-Ctrl-core.h  mhi_ac_ctrl.h
homeassistant/blueprints/automation/: mhi_active_mode.yaml
kicad/: .gitignore
kicad/MHI-AC-CTRL/: MHI-AC-CTRL.kicad_pcb  MHI-AC-CTRL.kicad_pro  MHI-AC-CTRL.kicad_sch  MHI-AC-CTRL.kicad_sym  fp-lib-table  sym-lib-table
kicad/MHI-AC-CTRL/MHI-AC-CTRL.pretty/: ESP-C3-32S-Kit.kicad_mod
main/: CMakeLists.txt  httpd.c  httpd.h  main.c  mhi.h  wifi.c  wifi.h
web/: wifi.html
